# comp_graf_laba1

./: .gitattributes  CMakeLists.txt  README.md  REAME.md  run.bat
lib/assimp/debug/lib/: assimp-vc143-mtd.lib  kubazip.lib  polyclipping.lib
lib/assimp/lib/: assimp-vc143-mt.lib  kubazip.lib  polyclipping.lib
lib/assimp/share/assimp/: vcpkg.spdx.json  vcpkg_abi_info.txt
lib/assimp/share/draco/: vcpkg.spdx.json  vcpkg_abi_info.txt
lib/assimp/share/jhasse-poly2tri/: vcpkg.spdx.json  vcpkg_abi_info.txt
lib/assimp/share/kubazip/: vcpkg.spdx.json  vcpkg_abi_info.txt
lib/assimp/share/minizip/: vcpkg.spdx.json  vcpkg_abi_info.txt
lib/assimp/share/polyclipping/: vcpkg.spdx.json  vcpkg_abi_info.txt
lib/assimp/share/pugixml/: vcpkg.spdx.json  vcpkg_abi_info.txt
lib/assimp/share/rapidjson/: vcpkg.spdx.json  vcpkg_abi_info.txt
lib/assimp/share/stb/: vcpkg.spdx.json  vcpkg_abi_info.txt
lib/assimp/share/utfcpp/: vcpkg.spdx.json  vcpkg_abi_info.txt
lib/assimp/share/vcpkg-cmake/: vcpkg.spdx.json  vcpkg_abi_info.txt
lib/assimp/share/vcpkg-cmake-config/: vcpkg.spdx.json  vcpkg_abi_info.txt
lib/assimp/share/vcpkg-cmake-get-vars/: vcpkg.spdx.json  vcpkg_abi_info.txt
lib/assimp/share/zlib/: vcpkg.spdx.json  vcpkg_abi_info.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
models/: 2.mtl  3.mtl  simple_with_mesh.mtl  simple_without_mesh.mtl
shaders/: fragment.glsl  line_fragment.glsl  line_vertex.glsl  vertex.glsl
src/: main.cpp  my_viev.cpp  my_viev.hpp  shader_load.cpp  shader_load.hpp
